istio/gwingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
  namespace: api
spec:
  selector: 
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "api.146.190.1.183.nip.io"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-virtualservice
  namespace: api
spec:
  hosts:
  - "api.146.190.1.183.nip.io"
  gateways:
  - api-gateway.api.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: api-service
        port:
          number: 9980
